--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ djangorestframework = "*"
 djangorestframework-jsonapi = {extras = ["django-filter", "openapi"], version = "*"}
 django-filter = "*"
 mysqlclient = "*"
+djangorestframework-csv = "*"
 
 [dev-packages]
 ipython = "*"
